zellij-integration-tests/tests/snapshots/initial_command__a_session_started_with_an_initial_command_runs_it_in_its_first_pane.snap
---
source: zellij-integration-tests/tests/initial_command.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
initial-command output
█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
