zellij-integration-tests/tests/snapshots/initial_command__an_initial_command_lands_in_the_focused_tab_of_a_layout.snap
---
source: zellij-integration-tests/tests/initial_command.rs
expression: normalized(&grid_snapshot)
---
initial-command output
█
