zellij-integration-tests/tests/snapshots/initial_command__an_initial_command_pane_is_held_open_when_the_command_exits.snap
---
source: zellij-integration-tests/tests/initial_command.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1 [ EXIT CODE: 42 ]      [ EXIT CODE: 42 ] <ENTER> re-run, <ESC> drop to shell, <Ctrl-c> exit
█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
