zellij-integration-tests/tests/snapshots/initial_command__attaching_to_a_background_session_shows_its_initial_command.snap
---
source: zellij-integration-tests/tests/initial_command.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
output while detached
█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
